// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome page renders the Welcome screen with no telemetry disclaimer 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <span
          className="homWelcome__logo"
        >
          <EuiIcon
            size="original"
            type="/ui/logos/opensearch_center_mark_on_light.svg"
          />
        </span>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to Page Title"
          size="l"
        >
          <h1>
            <MemoizedFormattedMessage
              defaultMessage="Welcome to Page Title"
              id="home.welcomeTitle"
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`Welcome page renders the Welcome screen with the telemetry disclaimer when optIn is false 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <span
          className="homWelcome__logo"
        >
          <EuiIcon
            size="original"
            type="/ui/logos/opensearch_center_mark_on_light.svg"
          />
        </span>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to Page Title"
          size="l"
        >
          <h1>
            <MemoizedFormattedMessage
              defaultMessage="Welcome to Page Title"
              id="home.welcomeTitle"
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
          <EuiTextColor
            className="euiText--small"
            color="subdued"
          >
            <MemoizedFormattedMessage
              defaultMessage="To learn about how usage data helps us manage and improve our products and services, see our "
              id="home.dataManagementDisclaimerPrivacy"
            />
            <EuiLink
              target="_blank"
            >
              <MemoizedFormattedMessage
                defaultMessage="Privacy Statement."
                id="home.dataManagementDisclaimerPrivacyLink"
              />
            </EuiLink>
            <MemoizedFormattedMessage
              defaultMessage=" To start collection, "
              id="home.dataManagementEnableCollection"
            />
            <EuiLink
              href="rootmanagement/opensearch-dashboards/settings"
            >
              <MemoizedFormattedMessage
                defaultMessage="enable usage data here."
                id="home.dataManagementEnableCollectionLink"
              />
            </EuiLink>
          </EuiTextColor>
          <EuiSpacer
            size="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`Welcome page renders the Welcome screen with the telemetry disclaimer when optIn is true 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <span
          className="homWelcome__logo"
        >
          <EuiIcon
            size="original"
            type="/ui/logos/opensearch_center_mark_on_light.svg"
          />
        </span>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to Page Title"
          size="l"
        >
          <h1>
            <MemoizedFormattedMessage
              defaultMessage="Welcome to Page Title"
              id="home.welcomeTitle"
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
          <EuiTextColor
            className="euiText--small"
            color="subdued"
          >
            <MemoizedFormattedMessage
              defaultMessage="To learn about how usage data helps us manage and improve our products and services, see our "
              id="home.dataManagementDisclaimerPrivacy"
            />
            <EuiLink
              target="_blank"
            >
              <MemoizedFormattedMessage
                defaultMessage="Privacy Statement."
                id="home.dataManagementDisclaimerPrivacyLink"
              />
            </EuiLink>
            <MemoizedFormattedMessage
              defaultMessage=" To stop collection, "
              id="home.dataManagementDisableCollection"
            />
            <EuiLink
              href="rootmanagement/opensearch-dashboards/settings"
            >
              <MemoizedFormattedMessage
                defaultMessage="disable usage data here."
                id="home.dataManagementDisableCollectionLink"
              />
            </EuiLink>
          </EuiTextColor>
          <EuiSpacer
            size="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`Welcome page renders the welcome logo with OpenSearch center mark when not branded 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <span
          className="homWelcome__logo"
        >
          <EuiIcon
            size="original"
            type="/ui/logos/opensearch_center_mark_on_light.svg"
          />
        </span>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to Page Title"
          size="l"
        >
          <h1>
            <MemoizedFormattedMessage
              defaultMessage="Welcome to Page Title"
              id="home.welcomeTitle"
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`Welcome page renders the welcome logo with custom branded logo when branded 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <div
          className="homWelcome__customLogoContainer"
        >
          <img
            alt="Page Title logo"
            className="homWelcome__customLogo"
            data-test-image-url="/custom/branded/mark.svg"
            data-test-subj="welcomeCustomLogo"
            src="/custom/branded/mark.svg"
          />
        </div>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to Page Title"
          size="l"
        >
          <h1>
            <MemoizedFormattedMessage
              defaultMessage="Welcome to Page Title"
              id="home.welcomeTitle"
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;
